# task-manager

./: .gitignore  README.md
.github/: copilot-instructions.md
backend/: .env.example  Cargo.toml
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
