[package]
name = "task-manager-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"